--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
-	"name": "TGG-Editor",
-  	"version": "0.0.1",
-		"title": "TGG-Editor",
-		"description": "",
-  	"private": true,
-  	"scripts": {
+  "name": "TGG-Editor",
+  "version": "0.0.1",
+  "title": "TGG-Editor",
+  "description": "Webeditor for creating semantic TGG rules",
+  "private": true,
+  "scripts": {
     "start": "node ./bin/www"
-  	},
-
-	"dependencies": {
-		"jquery": "latest",
-		"backbone": "latest",
-		"jointjs": "latest"
-	},
- 	"author": "Julian Rahm",
-	"author": "Markus Graube"
+  },
+  "dependencies": {
+    "backbone": "^1.3.3",
+    "bootstrap": "^3.3.7",
+    "jointjs": "^1.1.0",
+    "jquery": "^3.2.1"
+  },
+  "author": "Julian Rahm, Markus Graube"
 }
