--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
-  "private": true,
   "dependencies": {
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
@@ -22,28 +21,37 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.28",
     "backbone": "^1.3.3",
-    "bootstrap": "^3.3.7",
-    "jointjs": "^1.1.0",
-    "jquery": "^3.2.1",
+    "bootstrap": "^4.0.0-beta",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
+    "jointjs": "^1.1.0",
+    "jquery": "^3.1.1",
+    "lodash": "^3.10.1",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
     "@angular/cli": "1.0.2",
     "@angular/compiler-cli": "^4.0.0",
+    "@types/backbone": "^1.3.34",
     "@types/jasmine": "2.5.38",
+    "@types/jointjs": "^1.0.4",
+    "@types/jquery": "2.0.46",
+    "@types/lodash": "^3.10.1",
     "@types/node": "~6.0.60",
     "codelyzer": "~2.0.0",
+    "install": "^0.10.1",
     "jasmine-core": "~2.5.2",
     "jasmine-spec-reporter": "~3.2.0",
     "karma": "~1.4.1",
     "karma-chrome-launcher": "~2.0.0",
     "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^0.2.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-coverage-istanbul-reporter": "^0.2.0",
+    "npm": "^5.3.0",
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
