more working version

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jointjs": "^1.1.0",
     "jquery": "^3.1.1",
     "lodash": "^3.10.1",
+    "ngx-store": "^1.1.7",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
