--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "backbone": "^1.3.3",
     "bootstrap": "^3.3.7",
     "jointjs": "^1.1.0",
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "http": "latest",
+		"express": "^4.15.4",
+    "rdfstore": "^0.9.17",
+    "sparql-client-2": "^0.6.1",
+		"body-parser": "^1.17.2"
   },
   "author": "Julian Rahm, Markus Graube"
 }
